--- a/DataMining/web/pca/index.html
+++ b/DataMining/web/pca/index.html
@@ -29,28 +29,9 @@
 </head>
 
 <body>
-
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" id="homeLink">Data Mining</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a id="helplink" href="help.html" target="_blank">Help</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
+    <div id="helpDiv">
+        <a href="help.html">Help</a>
     </div>
-
-
-
     <div class="container-fluid">
         <div class="row">
             <div id="fileSizeError" style="display:none">
@@ -71,17 +52,6 @@
             </div>
         </div>
     </div>
-
-    <div class="footer">
-        <div class="container">
-            <center>
-                <img class="logo" src="http://dsiweb.cse.msu.edu/img/usaid_logo.png" style="width: 18%;height: auto; padding:0cm 4em 0cm 0cm;" alt="USAID Logo">
-                <img class="logo" src="http://dsiweb.cse.msu.edu/img/gcfsi_logo.png" style="width: 30%;height: auto; padding:0cm 0em 0cm 0cm;" alt="GCFSI Logo">
-                <img class="logo" src="http://dsiweb.cse.msu.edu/img/usgdl_logo.png" style="width: 19%;height: auto;padding:0cm 0em 0em 4em;" alt="HESN Logo">
-            </center>
-        </div>
-    </div>
-
     <div id="dialog" title="Upload CSV">
         Select data columns by holding shift and clicking column names:
         <table>
@@ -90,6 +60,7 @@
                 <td><select class="columnSelector" id="valueColumns" multiple size="4"></select></td>
             </tr>
         </table>
+        <p class="active"><span class="navbar"></span></p>
     </div>
 
 </body>
