--- a/Outliers/web_raster/help.html
+++ b/Outliers/web_raster/help.html
@@ -18,43 +18,38 @@
              data-dojo-type="dijit/layout/ContentPane"
              data-dojo-props="region:'top'">
             <div id="title" data-dojo-type="dijit/layout/ContentPane">
-                k Nearest Neighbor Help
+                Spatial Outlier Analysis - Raster Help
             </div>
         </div>
         <div id="helpcontent"
              data-dojo-type="dijit/layout/ContentPane"
              data-dojo-props="region:'center'">
             <p>
-                This application performs k Nearest Neighbor clustering to find clusters in raster TIFF files.
-                For more information on k Nearest Neighbor clustering, 
-                please click <a href="http://resources.arcgis.com/en/help/main/10.2/index.html#//005p0000004w000000" target="_blank">here</a>.
+                This application find spatial outliers in geospatial data.
+                For more information on the outlier analysis method,
+                please click <a href="http://resources.arcgis.com/en/help/main/10.2/index.html#/How_Cluster_and_Outlier_Analysis_Anselin_Local_Moran_s_I_works/005p00000012000000/" target="_blank">here</a>.
             </p>
-            <h3>Clustering Tool</h3>
+            <h3>Spatial Outlier Tool</h3>
             <h4>Step 1</h4>
             <p>
-                Click the "Choose File" button and navigate to a TIFF raster file (with an extension .tif).
+                Click the "Choose File" button and navigate to a TIFF raster file (with an extension .tif).  Click "Calculate".
             </p>
-            <img src="styles/helpimages/cl_step1.png" />
-            <h4>Step 2</h4>
-            <p>
-                Click "Calculate" and a popup will appear.  Enter the number of clusters you wish to calculate (between 2 and 10).
-                The application may return fewer clusters than requested if the data does not support the requested number of clusters.
-                Click "Compute Clusters".
-            </p>
-            <img src="styles/helpimages/cl_step2.png" />
+            <img src="styles/helpimages/step1.png" />
+            
             <h4>Results</h4>
             <p>
-                After a short time, the map should display your clustered layer.  Each color represents a different cluster.  
+                After a short time, the map should display your layer. Default pixels are shown in grey and 
+                outlier points in blue (represented by 0 and 1, respectively, in the raster).
+                You can clear the map to begin with a new dataset by clicking the "Clear" button.
                 You may download a TIFF file with your results by clicking "Download Raster Data" 
                 or clear the map to begin with a new dataset by clicking the "Clear" button.
             </p>
-            <img src="styles/helpimages/cl_results.png" />
+            <img src="styles/helpimages/results.png" />
             
             <h3>Legend</h3>
             <p>
-                The legend will automatically populate after you calculate clusters in your data.
+                The legend will automatically populate after you calculate outliers in your data.
             </p>
-            <img src="styles/helpimages/cl_legend.png" />
             <h3>Basemap picker</h3>
             <p>
                 Click the basemap button to toggle between the topographic basemap and a satellite imagery basemap.
