--- a/Outliers/web_raster/index.html
+++ b/Outliers/web_raster/index.html
@@ -70,6 +70,9 @@
 
                 <div>
                     <span class="tool-title-style">Step 1: Upload Raster File (*.tif)</span>
+                    <span style="display:block; width:100%; margin:0px;">
+                        Download example <a id="downloadFile" href="CASS_R.tif">here</a>
+                    </span>
                     <form id="uploadform" enctype="multipart/form-data" method="post">
                         <span style="display:block; text-align:center; width:100%;">
                             <input id="uploadFile" type="file" name="file" style="width:100%" accept=".tif" />
@@ -117,8 +120,12 @@
             <div data-dojo-type="dijit/layout/ContentPane"
                  data-dojo-props="region:'center'">
                 <div class="title-style">Tool Description</div>
-                <div id="legendDiv">
+                <div>
                     Find spatial outliers in TIF raster files.
+                </div>
+                <a href="#" onclick="showhide('testdiv', 'block'); return false">Show Sample Data Citation</a> | <a href="#" onclick="showhide('testdiv', 'none'); return false">Hide</a>
+                <div id="testdiv" style="display:none">
+                    HarvestChoice, 2011. "Agricultural production, yield and harvested area (2000)." International Food Policy Research Institute, Washington, DC., and University of Minnesota, St. Paul, MN. Available online at <a href="http://harvestchoice.org/maps">http://harvestchoice.org/maps</a>
                 </div>
             </div>
         </div>
