--- a/PointCluster/web_raster/help.html
+++ b/PointCluster/web_raster/help.html
@@ -34,27 +34,26 @@
             <p>
                 Click the "Choose File" button and navigate to a TIFF raster file (with an extension .tif).
             </p>
-            <img src="styles/helpimages/cl_step1.png" />
+            <img src="styles/helpimages/step1.png" />
             <h4>Step 2</h4>
             <p>
                 Click "Calculate" and a popup will appear.  Enter the number of clusters you wish to calculate (between 2 and 10).
                 The application may return fewer clusters than requested if the data does not support the requested number of clusters.
                 Click "Compute Clusters".
             </p>
-            <img src="styles/helpimages/cl_step2.png" />
+            <img src="styles/helpimages/step2.png" />
             <h4>Results</h4>
             <p>
                 After a short time, the map should display your clustered layer.  Each color represents a different cluster.  
                 You may download a TIFF file with your results by clicking "Download Raster Data" 
                 or clear the map to begin with a new dataset by clicking the "Clear" button.
             </p>
-            <img src="styles/helpimages/cl_results.png" />
+            <img src="styles/helpimages/results.png" />
             
             <h3>Legend</h3>
             <p>
                 The legend will automatically populate after you calculate clusters in your data.
             </p>
-            <img src="styles/helpimages/cl_legend.png" />
             <h3>Basemap picker</h3>
             <p>
                 Click the basemap button to toggle between the topographic basemap and a satellite imagery basemap.
