--- a/PointCluster/web_raster/index.html
+++ b/PointCluster/web_raster/index.html
@@ -76,7 +76,7 @@
 
                     <form id="uploadform" enctype="multipart/form-data" method="post">
                         <span style="display:block; text-align:center; width:100%;">
-                            <input id="uploadFile" type="file" name="file" style="width:100%" accept=".tif" />
+                            <input id="uploadFile" type="file" name="file" style="width:100%" accept=".tif,.tiff" />
                         </span>
                         <!--<input id="uploadFile"  type="file" name="file"/>-->
                     </form>
