--- a/Outliers/web_raster/index.html
+++ b/Outliers/web_raster/index.html
@@ -75,7 +75,7 @@
                     </span>
                     <form id="uploadform" enctype="multipart/form-data" method="post">
                         <span style="display:block; text-align:center; width:100%;">
-                            <input id="uploadFile" type="file" name="file" style="width:100%" accept=".tif" />
+                            <input id="uploadFile" type="file" name="file" style="width:100%" accept=".tif,.tiff" />
                         </span>
                     </form>
                 </div>
