--- a/HotSpotAnalysis/web_raster/help.html
+++ b/HotSpotAnalysis/web_raster/help.html
@@ -39,7 +39,7 @@
             <h4>Results</h4>
             <p>
                 After a short time, the map should display your layer. Default pixels are shown in grey and 
-                outlier points in red (represented by 0 and 1, respectively, in the raster).
+                outlier points in blue (represented by 0 and 1, respectively, in the raster).
                 You can clear the map to begin with a new dataset by clicking the "Clear" button.
                 You may download a TIFF file with your results by clicking "Download Raster Data" 
                 or clear the map to begin with a new dataset by clicking the "Clear" button.
