--- a/Algebra/web/index.html
+++ b/Algebra/web/index.html
@@ -169,6 +169,8 @@
         <div id="chooseRastersDialog" title="Choose Rasters">
             <div id="raster-checkboxes"></div>
         </div>
+
+        <div id="popup"/>
              
     </div>
 </body>
