--- a/DataMining/web/pca/help.html
+++ b/DataMining/web/pca/help.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Data Mining: PCA Feature Selection HELP</title>
+    <title>Data Mining: Principal Component Analysis (PCA) Feature Selection HELP</title>
 
     <link rel="stylesheet" href="css/datamining.css">
 </head>
 <body>
-    <h1>Data Mining: PCA Feature Selection HELP</h1>
-    This application uses PCA to create new features.  
+    <h1>Data Mining: Principal Component Analysis (PCA) Feature Selection HELP</h1>
+    This application uses principal component analysis to create new features.  
     <h3>Step 1</h3>
     Click the "Choose File" button and navigate to a CSV file that contains your data.
     <br/>
