--- a/HotSpotAnalysis/web_raster/help.html
+++ b/HotSpotAnalysis/web_raster/help.html
@@ -18,18 +18,18 @@
              data-dojo-type="dijit/layout/ContentPane"
              data-dojo-props="region:'top'">
             <div id="title" data-dojo-type="dijit/layout/ContentPane">
-                Spatial Outlier Analysis - Raster Help
+                Hot and Cold Spot Analysis - Raster Help
             </div>
         </div>
         <div id="helpcontent"
              data-dojo-type="dijit/layout/ContentPane"
              data-dojo-props="region:'center'">
             <p>
-                This application find spatial outliers in geospatial data.
+                This application find hot and cold spots in geospatial data.
                 For more information on the outlier analysis method,
-                please click <a href="http://resources.arcgis.com/en/help/main/10.2/index.html#/How_Cluster_and_Outlier_Analysis_Anselin_Local_Moran_s_I_works/005p00000012000000/" target="_blank">here</a>.
+                please click <a href="http://resources.arcgis.com/en/help/main/10.2/index.html#/How_Hot_Spot_Analysis_Getis_Ord_Gi_works/005p00000011000000/" target="_blank">here</a>.
             </p>
-            <h3>Spatial Outlier Tool</h3>
+            <h3>Hot and Cold Spot Analysis Tool</h3>
             <h4>Step 1</h4>
             <p>
                 Click the "Choose File" button and navigate to a TIFF raster file (with an extension .tif).  Click "Calculate".
@@ -38,8 +38,8 @@
             
             <h4>Results</h4>
             <p>
-                After a short time, the map should display your layer. Default pixels are shown in grey and 
-                outlier points in blue (represented by 0 and 1, respectively, in the raster).
+                After a short time, the map should display your layer. Default pixels are shown in white, hot spots  
+                in red, and cold spots in blue (represented by classes ranging from -3 to 3, respectively, in the raster).
                 You can clear the map to begin with a new dataset by clicking the "Clear" button.
                 You may download a TIFF file with your results by clicking "Download Raster Data" 
                 or clear the map to begin with a new dataset by clicking the "Clear" button.
@@ -48,7 +48,7 @@
             
             <h3>Legend</h3>
             <p>
-                The legend will automatically populate after you calculate outliers in your data.
+                The legend will automatically populate after you calculate hot and cold spots in your data.
             </p>
             <h3>Basemap picker</h3>
             <p>
