updates for feature selection sample files

--- a/DataMining/web/spearman/index.html
+++ b/DataMining/web/spearman/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div>
                 <p>Upload a file to rank columns using Spearman correlation:</p>
-                <input id="uploadFileSpearman" type="file" style="width:100%" accept=".csv" />
+                <input id="uploadFileSpearman" type="file" style="width:100%" />
                 
             </div>
         </div>
@@ -55,6 +55,16 @@
                     </thead>
                     <tbody></tbody>
                 </table>
+            </div>
+        </div>
+
+        <div class="row">
+            <div>
+                <h4>Sample Data</h4>
+                <p>
+                    The goal of the project is to determine the most relevant parameters for determining drought condition for all stream segments within the study area. The data set consists of 2000 records. The first column in the table represents the median flow in the driest month of the year and the rest of the columns are predictive variables. Columns 4 to 20 are the physiographical parameters; columns 21 to 44 are the stream flow parameters; and columns 45 to 69 are the weather related (more specifically precipitation) parameters.
+                </p>
+                Download example <a id="downloadFile" href="featuresel_data.csv">here</a>
             </div>
         </div>
     </div>
