--- a/DataMining/web/pca/index.html
+++ b/DataMining/web/pca/index.html
@@ -42,8 +42,7 @@
         <div class="row">
             <div>
                 <p>Upload a file to create features using principal component analysis:</p>
-                <input id="uploadFile" type="file" style="width:100%" accept=".csv" />
-                
+                <input id="uploadFile" type="file" style="width:100%"/>
             </div>
         </div>
 
@@ -56,7 +55,7 @@
             <div>
                 <h4>Sample Data</h4>
                 <p>
-                    The goal of the project is to determine the most relevant parameters for determining drought condition for all stream segments within the study area. The data set consists of 2000 records. The first column in the table represents the median flow in the driest month of the year and the rest of the columns are predictive variables. Columns 4 to 20 are the physiographical parameters; columns 21to 44 are the stream flow parameters; and columns 45 to 69 are the weather related (more specifically precipitation) parameters.
+                    The goal of the project is to determine the most relevant parameters for determining drought condition for all stream segments within the study area. The data set consists of 1000 records. The first column in the table represents the median flow in the driest month of the year and the rest of the columns are predictive variables. Columns 4 to 20 are the physiographical parameters; columns 21 to 44 are the stream flow parameters; and columns 45 to 69 are the weather related (more specifically precipitation) parameters.
                 </p>
                 Download example <a id="downloadFile" href="featuresel_data.csv">here</a>
             </div>
