many many CSV fixes

--- a/OLS/web/index.html
+++ b/OLS/web/index.html
@@ -69,9 +69,9 @@
 
                 <div>
                     <span class="tool-title-style">Step 1: Load CSV File</span>
-                    <!--<span style="display:block; width:100%; margin:0px;">
-                        Download example <a id="downloadFile" href="MalawiPoints.csv">here</a>
-                    </span>-->
+                    <span style="display:block; width:100%; margin:0px;">
+                        Download example <a id="downloadFile" href="ols_sample.csv">here</a>
+                    </span>
 
                     <span style="display:block; text-align:center; width:100%;">
                         <input id="uploadFile" type="file" style="width:100%" accept=".csv" />
