--- a/PointCluster/web/index.html
+++ b/PointCluster/web/index.html
@@ -18,6 +18,7 @@ document.getElementById(divid).style.display=state
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-lightness/jquery-ui.min.css">
 
+    <script src="scripts/External/papaparse.min.js"></script>
     <script type="text/javascript">
         var package_path = location.pathname.substring(0, location.pathname.lastIndexOf('/')).replace("/\/[^/]+$/", "");
         var dojoConfig = {
