--- a/Algebra/web/index.html
+++ b/Algebra/web/index.html
@@ -82,6 +82,7 @@
                     <span style="display:block; text-align:center; width:100%;">
                         <input id="bufferButton" type="button" value="Choose Point" class="toolbutton" />
                         <input id="polygonButton" type="button" value="Draw Polygon" class="toolbutton" />
+                        <input id="borderButton" type="button" value="Choose Border" class="toolbutton" />
                     </span>
                 </div>
                 
@@ -140,6 +141,7 @@
              data-dojo-props="region:'center'"
              style="overflow:hidden;">
             <div id="BasemapToggle"></div>
+            <div id="mousetooltipDiv"></div>
         </div>
 
         <!--JQuery Dialogs-->
