--- a/OLS/web/index.html
+++ b/OLS/web/index.html
@@ -132,9 +132,9 @@
                     Find relationships between variables in your dataset using Ordinary Least Squares, and optionally use this information to make predictions about other data points. This application supports any geocoded CSV files.
                     <br><br>
 
-                    <!--<a href="#" onclick="showhide('testdiv', 'block'); return false">Show Sample Data Citation</a> | <a href="#" onclick="showhide('testdiv', 'none'); return false">Hide</a>
+                    <a href="#" onclick="showhide('testdiv', 'block'); return false">Show Sample Data Citation</a> | <a href="#" onclick="showhide('testdiv', 'none'); return false">Hide</a>
 
-                    <div id="testdiv" style="display:none">Center for International Earth Science Information Network (CIESIN), Columbia University; and Centro Internacional de Agricultura Tropical (CIAT). 2005. Gridded Population of the World Version 3 (GPWv3): Centroids. Palisades, NY: Socioeconomic Data and Applications Center (SEDAC), Columbia University. Available at <a target="_blank" href="http://sedac.ciesin.columbia.edu/gpw">http://sedac.ciesin.columbia.edu/gpw</a>. (March 2014) </div>-->
+                    <div id="testdiv" style="display:none">U.S. Census Bureau. Census Summary File, 2010." Prepared by Social Explorer. (October 2013) </div>
                     <br><br>
                 </div>
             </div>
@@ -152,7 +152,7 @@
         <div id="infowindow"></div>
 
         <div id="csvDialog" title="Upload CSV">
-            <span>All columns must contain numerical data only. Please choose a maximum of 5 data fields.</span>
+            <span>All columns must contain numerical data only. Please choose a maximum of 10 data fields.</span>
             </br>
             <table>
                 <tr>
