add borders to AgVis and AgVis storage apps

--- a/AgVisStorage/web/index.html
+++ b/AgVisStorage/web/index.html
@@ -77,6 +77,7 @@
                     <span style="display:block; text-align:center; width:100%;">
                         <input id="bufferButton" type="button" value="Choose Point" class="toolbutton" />
                         <input id="polygonButton" type="button" value="Draw Polygon" class="toolbutton" />
+                        <input id="borderButton" type="button" value="Choose Border" class="toolbutton" />
                     </span>
                     <span style="font-weight:bold">Results</span>
                     <table>
@@ -246,6 +247,7 @@
              data-dojo-props="region:'center'"
              style="overflow:hidden;">
             <div id="BasemapToggle"></div>
+            <div id="mousetooltipDiv"></div>
         </div>
 
         <!--JQuery Dialogs-->
